# Bike-Sharing

./: .gitignore  main.py  pyproject.toml  requirements.txt  setup.py
Notebook/: Eda.ipynb  Model.ipynb
Notebook/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
Notebook/catboost_info/learn/: events.out.tfevents
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
