[project]
name = "ml-bike-sharing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cycler>=0.12.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy==1.26.4",
    "pandas==2.1.4",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
